kubernetes/rubrik/applications/mosquitto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:2.0.21
        ports:
        - containerPort: 8883
        - containerPort: 9001
        volumeMounts:
        - mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
          name: config
        - mountPath: /mosquitto/certs/
          name: certs
        - mountPath: /mosquitto/data/
          name: data
        - mountPath: /mosquitto/config/password.txt
          subPath: password.txt
          name: mosquitto-password
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 256Mi
      volumes:
      - name: config
        configMap:
          name: mosquitto-config
      - name: mosquitto-password
        configMap:
          name: mosquitto-password
      - name: certs
        secret:
          secretName: mqtt.rubrik.lab.home.morey.tech-tls
      - name: data
        persistentVolumeClaim:
          claimName: mosquitto-data
