kubernetes/rubrik/applications/mosquitto/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtts
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
  - port: 8883
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-ws
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
  - port: 9001
