kubernetes/rubrik/applications/mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mqtt.rubrik.lab.home.morey.tech
    secretName: mqtt.rubrik.lab.home.morey.tech-tls
  rules:
  - host: mqtt.rubrik.lab.home.morey.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mosquitto-ws
            port: 
              number: 9001
